fix: wrap content in .content

--- a/src/components/content/content.less
+++ b/src/components/content/content.less
@@ -1,4 +1,6 @@
 .content {
+	word-wrap: break-word;
+
 	h1 {
 		font-size: 3em;
 		font-weight: 700;
